[tool.poetry]
name = "9-ball-tracker"
version = "0.1.0"
description = ""
authors = ["AKAAka1450 <58277892+AKAAka1450@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "9_ball_tracker"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
opencv-python = "^4.8.1.78"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
